--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,7 +28,7 @@
     <color name="ver_divide_line">#d1d5db</color>
     <color name="link_hover">#0076ff</color>
     <color name="font_dark_gray">#8b8b8b</color>
-    <color name="font_gray">#999999</color>
+    <color name="font_gray">#bababa</color>
     <color name="font_light_gray">#bfbfbf</color>
     <color name="font_black">#333333</color>
     <color name="font_blue">#0076ff</color>
