--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -124,8 +124,9 @@
     <style name="LiveLessonCreateEdt" parent="LessonText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/font_30px</item>
-        <item name="android:textColor">@color/font_gray</item>
+        <item name="android:textSize">@dimen/font_28px</item>
+        <item name="android:textColor">@color/font_black</item>
+        <item name="android:textColorHint">@color/font_light_gray</item>
         <item name="android:background">@null</item>
         <item name="android:lines">1</item>
     </style>
