--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -81,4 +81,8 @@
         <item>支付宝</item>
         <item>微信</item>
     </string-array>
+    <string-array name="lesson_home_tab_titles">
+        <item>简介</item>
+        <item>评价</item>
+    </string-array>
 </resources>
