--- a/app/src/main/res/layout/layout_pay_lesson_item.xml
+++ b/app/src/main/res/layout/layout_pay_lesson_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
-                 android:layout_height="70dp"
-                 android:checkMark="@drawable/multi_check_selector"
+                 android:layout_height="60dp"
+                 android:checkMark="@drawable/single_check_selector"
                  android:drawableLeft="@drawable/ic_alipay"
                  android:gravity="center_vertical"
-                 android:drawablePadding="8dp"
-                 android:textSize="16sp"
+                 android:drawablePadding="@dimen/px24"
+                 android:textSize="18sp"
         >
 
 </CheckedTextView>
