--- a/app/src/main/res/layout/activity_modify_lesson.xml
+++ b/app/src/main/res/layout/activity_modify_lesson.xml
@@ -18,6 +18,7 @@
 
         <LinearLayout
                 android:background="@color/white"
+                android:layout_marginTop="@dimen/px30"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
