--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,5 +62,5 @@
     <color name="course_state_draft">#6699ff</color>
     <color name="course_state_examine">#66cccc</color>
     <color name="course_item_stroke_line">#eff2f6</color>
-
+    <color name="common_btn_white_bg_press">#ffd7d7db</color>
 </resources>
