--- a/app/src/main/res/layout/activity_live_lesson_detail.xml
+++ b/app/src/main/res/layout/activity_live_lesson_detail.xml
@@ -36,7 +36,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:textColor="@color/font_black"
+                        android:textColor="@color/font_orange"
                         android:textSize="@dimen/font_26px"/>
 
                 <TextView
@@ -69,7 +69,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:textColor="@color/font_black"
+                        android:textColor="@color/font_orange"
                         android:textSize="@dimen/font_26px"/>
 
                 <TextView
@@ -102,7 +102,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
-                        android:textColor="@color/font_black"
+                        android:textColor="@color/font_orange"
                         android:textSize="@dimen/font_26px"/>
 
                 <TextView
