--- a/app/src/main/res/layout/layout_course_item_function.xml
+++ b/app/src/main/res/layout/layout_course_item_function.xml
@@ -109,43 +109,45 @@
                 android:layout_height="wrap_content"/>
     </LinearLayout>
 
-    <LinearLayout
-            android:orientation="horizontal"
+
+    <com.benyuan.xiaojs.ui.widget.RedTipImageView
+            android:id="@+id/course_item_fun_data_base"
+            android:padding="@dimen/px10"
+            android:visibility="gone"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/px30"
             android:layout_centerInParent="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/data_base_selector"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-        <TextView
-                android:id="@+id/course_item_fun_error"
-                android:textColor="@color/totally_red_font"
-                android:textSize="@dimen/font_26px"
-                android:paddingTop="@dimen/px25"
-                android:visibility="invisible"
-                android:layout_gravity="center_vertical"
-                android:paddingBottom="@dimen/px25"
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"/>
+    <com.benyuan.xiaojs.ui.widget.RedTipImageView
+            android:id="@+id/course_item_fun_more"
+            android:padding="@dimen/px35"
+            android:visibility="gone"
+            android:layout_alignParentRight="true"
+            android:layout_centerInParent="true"
+            android:layout_marginRight="@dimen/px30"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_lesson_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-        <com.benyuan.xiaojs.ui.widget.RedTipImageView
-                android:id="@+id/course_item_fun_more"
-                android:padding="@dimen/px35"
-                android:visibility="gone"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_lesson_more"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        <com.benyuan.xiaojs.ui.widget.RedTipImageView
-                android:id="@+id/course_item_fun_data_base"
-                android:padding="@dimen/px10"
-                android:visibility="gone"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/data_base_selector"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-    </LinearLayout>
+    <TextView
+            android:id="@+id/course_item_fun_error"
+            android:textColor="@color/totally_red_font"
+            android:textSize="@dimen/font_26px"
+            android:paddingTop="@dimen/px25"
+            android:visibility="gone"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
+            android:paddingBottom="@dimen/px25"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_toLeftOf="@id/course_item_fun_more"
+            android:layout_marginRight="@dimen/px30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 
 </RelativeLayout>
