--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -64,10 +64,10 @@
     </string-array>
     <string-array name="center_tab_items">
         <item>发动态</item>
-        <item>开课</item>
         <item>聊天</item>
-        <item>找课</item>
+        <item>约辅导</item>
         <item>提问</item>
+        <item>开课</item>
     </string-array>
     <string-array name="course_block_tabs">
         <item>我学的课</item>
