--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <include
-        android:id="@+id/header"
-        layout="@layout/layout_base_header" />
+            android:id="@+id/header"
+            layout="@layout/layout_base_header"/>
+
+    <View
+            android:id="@+id/base_header_divider"
+            style="@style/DividerHorizontal2"/>
 
     <FrameLayout
-        android:id="@+id/base_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+            android:id="@+id/base_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 </LinearLayout>
