--- a/app/src/main/res/layout/activity_cancel_lesson.xml
+++ b/app/src/main/res/layout/activity_cancel_lesson.xml
@@ -1,77 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/red"
-                android:layout_marginTop="@dimen/px30"
-                android:paddingRight="@dimen/px60"
-                android:paddingLeft="@dimen/px60"
-                android:text="@string/cancel_lesson_time_mark"/>
-
         <LinearLayout
-                android:background="@color/white"
-                android:layout_marginTop="@dimen/px30"
                 android:orientation="horizontal"
+                android:layout_margin="@dimen/px50"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <TextView
-                    android:paddingBottom="@dimen/px30"
-                    android:paddingTop="@dimen/px30"
-                    android:textSize="@dimen/font_26px"
-                    android:textColor="@color/font_black"
-                    android:layout_marginLeft="@dimen/px30"
-                    android:minEms="7"
-                    android:gravity="right"
-                    android:text="@string/lesson_name"
+            <ImageView
+                    android:scaleType="center"
+                    android:src="@drawable/ic_tips"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
             <TextView
-                    android:id="@+id/cancel_lesson_origin_name"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/px15"
                     android:textColor="@color/common_text"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="@dimen/font_26px"/>
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/cancel_lesson_time_mark"/>
         </LinearLayout>
 
-        <View style="@style/DividerHorizontal"/>
-
-        <TextView
-                android:layout_marginLeft="@dimen/px30"
-                android:layout_marginTop="@dimen/px30"
-                android:textSize="@dimen/font_26px"
-                android:textColor="@color/font_black"
-                android:text="@string/reason"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        <com.benyuan.xiaojs.ui.widget.LimitInputBox
-                android:id="@+id/cancel_lesson_reason"
-                android:layout_marginTop="@dimen/px30"
+        <LinearLayout
+                android:orientation="vertical"
+                android:background="@color/white"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/px350"/>
+                android:layout_height="wrap_content">
+
+            <LinearLayout
+                    android:background="@color/white"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <TextView
+                        android:paddingBottom="@dimen/px30"
+                        android:paddingTop="@dimen/px30"
+                        android:textSize="@dimen/font_26px"
+                        android:textColor="@color/font_black"
+                        android:layout_marginLeft="@dimen/px30"
+                        android:text="@string/lesson_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:id="@+id/cancel_lesson_origin_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/font_black"
+                        android:layout_marginLeft="@dimen/px30"
+                        android:maxLines="2"
+                        android:ellipsize="end"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="@dimen/font_22px"/>
+            </LinearLayout>
+
+            <View style="@style/DividerHorizontal"/>
+
+            <TextView
+                    android:layout_marginLeft="@dimen/px30"
+                    android:layout_marginTop="@dimen/px30"
+                    android:textSize="@dimen/font_26px"
+                    android:textColor="@color/font_black"
+                    android:text="@string/cancel_reason"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <com.benyuan.xiaojs.ui.widget.LimitInputBox
+                    android:id="@+id/cancel_lesson_reason"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/px350"/>
+        </LinearLayout>
+
+        <Button
+                android:id="@+id/cancel_lesson_ok"
+                style="@style/BigSubmitBtn"
+                android:layout_marginLeft="@dimen/px30"
+                android:layout_marginRight="@dimen/px30"
+                android:layout_marginTop="@dimen/px90"
+                android:text="@string/ok"/>
     </LinearLayout>
 
-    <Button
-            android:id="@+id/cancel_lesson_ok"
-            android:paddingTop="@dimen/px20"
-            android:paddingBottom="@dimen/px20"
-            android:text="@string/ok"
-            android:textColor="@color/white"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/big_submit_btn_selector"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-</RelativeLayout>
+
+</ScrollView>
