--- a/app/src/main/res/layout/layout_course_block.xml
+++ b/app/src/main/res/layout/layout_course_block.xml
@@ -207,24 +207,27 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/px20"
-            android:layout_marginRight="@dimen/px20"
-            android:layout_marginTop="@dimen/px30"
+            android:background="@drawable/ic_student_bg"
+            android:layout_marginLeft="@dimen/px30"
+            android:layout_marginRight="@dimen/px30"
+            android:layout_marginTop="@dimen/px20"
             android:layout_marginBottom="@dimen/px30">
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/common_text"
-                android:layout_marginLeft="@dimen/px30"
+                android:layout_marginLeft="@dimen/px10"
                 android:textSize="@dimen/font_22px"
                 android:layout_gravity="center_vertical"
                 android:text="@string/enter_cls_stu_hint"/>
 
         <com.benyuan.xiaojs.ui.widget.flow.ImageFlowLayout
                 android:id="@+id/image_flow"
+                android:layout_marginTop="@dimen/px5"
+                android:layout_marginBottom="@dimen/px5"
                 android:layout_marginLeft="@dimen/px10"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
 </LinearLayout>
