--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color name="disable_btn">#999999</color>
     <!--horizontal divide line-->
     <color name="hor_divide_line">#d1d5db</color>
-    <color name="hor_divide_line2">#d1d5db</color>
+    <color name="hor_divide_line2">#E5E5E5</color>
     <color name="hor_divide_line3">#d1d5db</color>
     <!--vertical divide line-->
     <color name="ver_divide_line">#d1d5db</color>
