--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -107,6 +107,7 @@
                         android:text="@string/my_profile_txt"
                         android:layout_marginBottom="@dimen/px60"
                         android:textSize="@dimen/font_22px"
+                        android:layout_gravity="center_horizontal"
                         android:textColor="@color/font_light_gray"
                         android:layout_height="wrap_content"/>
             </LinearLayout>
