优化消息界面，修改下拉刷新列表位置计算的问题

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -92,5 +92,6 @@
         <item>问答信息</item>
         <item>交易信息</item>
         <item>精选推荐</item>
+        <item>小教室秘书</item>
     </string-array>
 </resources>
