--- a/app/src/main/res/layout/activity_message_list.xml
+++ b/app/src/main/res/layout/activity_message_list.xml
@@ -7,4 +7,5 @@
         android:layout_height="match_parent"
         android:scrollbars="none"
         android:divider="@android:color/transparent"
+        android:dividerHeight="@dimen/px20"
         android:orientation="vertical"/>
