--- a/app/src/main/res/layout/layout_message_category_list_item.xml
+++ b/app/src/main/res/layout/layout_message_category_list_item.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:background="@drawable/white_grey_selector"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
+
+    <View
+            style="@style/DividerHorizontal2"/>
 
     <TextView
             android:id="@+id/message_list_item_time"
             android:textColor="@color/common_text"
             android:textSize="@dimen/font_22px"
             android:layout_marginLeft="@dimen/px30"
-            android:layout_marginTop="@dimen/px30"
+            android:layout_marginTop="@dimen/px20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -20,12 +24,13 @@
             android:maxLines="2"
             android:ellipsize="end"
             android:layout_marginLeft="@dimen/px30"
-            android:layout_marginTop="@dimen/px30"
+            android:layout_marginRight="@dimen/px30"
+            android:layout_marginTop="@dimen/px20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
     <View
-            style="@style/DividerHorizontal"
+            style="@style/DividerHorizontal2"
             android:layout_marginTop="@dimen/px30"/>
 
     <RelativeLayout
@@ -56,5 +61,5 @@
 
     <View
             android:id="@+id/message_list_item_bottom_divider"
-            style="@style/DividerHorizontal"/>
+            style="@style/DividerHorizontal2"/>
 </LinearLayout>
