--- a/app/src/main/res/drawable/toggle_btn_selector.xml
+++ b/app/src/main/res/drawable/toggle_btn_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    
-    <item android:state_checked="true" android:drawable="@drawable/ic_open"></item>
-	<item android:drawable="@drawable/ic_close"></item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:state_checked="true" android:drawable="@drawable/ic_switcher_on"></item>
+    <item android:drawable="@drawable/ic_switcher_off"></item>
 </selector>
