--- a/app/src/main/res/layout/activity_audit.xml
+++ b/app/src/main/res/layout/activity_audit.xml
@@ -98,6 +98,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerInParent="true"
                     android:layout_marginRight="@dimen/px32"
+                    android:background="@drawable/toggle_btn_selector"
                     android:textOff=""
                     android:textOn=""/>
         </RelativeLayout>
