--- a/app/src/main/res/layout/layout_base_header.xml
+++ b/app/src/main/res/layout/layout_base_header.xml
@@ -10,13 +10,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left|center_vertical"
-            android:layout_marginLeft="@dimen/px30"
+            android:paddingLeft="@dimen/px32"
+            android:paddingRight="@dimen/px32"
+            android:paddingTop="@dimen/px16"
+            android:paddingBottom="@dimen/px16"
             android:textColor="@color/font_black"/>
 
     <ImageView
             android:id="@+id/left_image"
             android:layout_gravity="left|center_vertical"
-            android:layout_marginLeft="@dimen/px30"
+            android:paddingLeft="@dimen/px32"
+            android:paddingRight="@dimen/px32"
+            android:paddingTop="@dimen/px16"
+            android:paddingBottom="@dimen/px16"
             android:src="@drawable/back_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -35,13 +41,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
-            android:layout_marginRight="@dimen/px30"
+            android:paddingLeft="@dimen/px32"
+            android:paddingRight="@dimen/px32"
+            android:paddingTop="@dimen/px16"
+            android:paddingBottom="@dimen/px16"
             android:textColor="@color/font_black"/>
 
     <ImageView
             android:id="@+id/right_image"
             android:layout_gravity="right|center_vertical"
-            android:layout_marginRight="@dimen/px30"
+            android:paddingLeft="@dimen/px32"
+            android:paddingRight="@dimen/px32"
+            android:paddingTop="@dimen/px16"
+            android:paddingBottom="@dimen/px16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 </FrameLayout>
